# qctools

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
example/adf/: test.py
example/coord/: 00.vasp  test.vasp  test_group_coordnum.py  test_group_coordnum_serial.py
example/edit_atoms/remove/: CONTCAR  CONTCAR_remove.vasp  README.md
example/ml/error_img/: README.md
example/ml/error_img/test_n2p2/: test_error_img.py
example/ml/error_img/test_nep/: test_error_img.py
example/radius/: POSCAR  test.py
example/rdf/: test.py  test.xyz
qctools/: __init__.py  adf.py  coord.py  edit_atoms.py  element_tools.py  radius.py  rdf.py  vaspjob
qctools/ml/: __init__.py  error_img.py
